--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
                 <a class="nav-link page-scroll" href="#home">Inicio</a>
               </li>  
               <li class="nav-item">
-                <a class="nav-link page-scroll" href="https://qrd.by/hv8bw4">Registrarme</a>
+                <a class="nav-link page-scroll" href="http://bit.ly/ComunidadesTechCR">Registrarme</a>
               </li>                            
               <li class="nav-item">
-                <a class="nav-link page-scroll" href="https://qrd.by/hv8bw4">Eventos</a>
+                <a class="nav-link page-scroll" href="http://bit.ly/ComunidadesTechCR">Eventos</a>
               </li>       
               <li class="nav-item">
-                <a class="nav-link page-scroll" href="https://qrd.by/hv8bw4">Team</a>
+                <a class="nav-link page-scroll" href="#">Team</a>
               </li> 
               <li class="nav-item">
-                <a class="btn btn-singin" href="https://qrd.by/hv8bw4">Unirme</a>
+                <a class="btn btn-singin" href="http://bit.ly/ComunidadesTechCR">Unirme</a>
               </li>
             </ul>
           </div>
@@ -66,9 +66,11 @@
               <p>Esta iniciativa busca la difusión/fortalecimiento de estos programas en la región y será un honor contar con tu apoyo. </p>
 
               <p>Por medio de la tecnología QR acercamos a la comunidad con líderes técnicos. </p>
+              <p>Lanzamiento Oficial: 16 de Febrero, 2021 </p>
+              <p>Transmisión En Vivo! </p>
               <div class="header-button">
-                <a href="https://qrd.by/hv8bw4" rel="nofollow" target="_blank" class="btn btn-border-filled">Afiliarme</a>
-                <a href="https://qrd.by/hv8bw4" rel="nofollow" target="_blank" class="btn btn-border page-scroll">Comunidades</a>
+                <a href="http://bit.ly/ComunidadesTechCR" rel="nofollow" target="_blank" class="btn btn-border-filled">Afiliarme</a>
+                <a href="http://bit.ly/ComunidadesTechCR" rel="nofollow" target="_blank" class="btn btn-border page-scroll">Comunidades</a>
               </div>
             </div>
           </div>
@@ -151,8 +153,8 @@
                 <h3 class="block-title">QR TechCR</h3>
                 <ul class="menu">
                   <li><a href="#">  - Comunidades</a></li>
-                  <li><a href="#">- Afiliarme</a></li>
-                  <li><a href="#">- Registro</a></li>
+                  <li><a href="http://bit.ly/ComunidadesTechCR">- Afiliarme</a></li>
+                  <li><a href="http://bit.ly/ComunidadesTechCR">- Registro</a></li>
                   <li><a href="#">- Apoyo</a></li>
                 </ul>
               </div>
