--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               <h2 class="head-title">QR Comunidades Tech CR</h2>
               <p>Esta iniciativa busca la difusión/fortalecimiento de estos programas en la región y será un honor contar con tu apoyo. </p>
 
-              <p>Por medio de la tecnología QR acercamos a la comunidad con líderes técnicos. </p>
+              <p>Por medio de la tecnología QR conectamos a la comunidad con líderes y Expert@s Técnicos. </p>
               <p>Lanzamiento Oficial: 16 de Febrero, 2021 </p>
               <p>Transmisión En Vivo! </p>
               <div class="header-button">
