--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <div class="col-lg-6 col-md-12 col-xs-12">
             <div class="contents">
               <h2 class="head-title">QR Comunidades Tech CR</h2>
-              <p>Esta iniciativa busca la difusión/fortalecimiento de estos programas en la región y será un honor contar con tu apoyo. </p>
+              <p>Esta iniciativa busca la difusión de programas Tech en la región y será un honor contar con tu apoyo. </p>
 
               <p>Por medio de la tecnología QR conectamos a la comunidad con líderes y Expert@s Técnicos. </p>
               <p>Lanzamiento Oficial: 16 de Febrero, 2021 </p>
